<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/edt_search"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="13dp"
        android:layout_marginRight="13dp"
        android:background="@drawable/shape_bg_search"
        android:drawableLeft="@drawable/icon_search"
        android:drawablePadding="14dp"
        android:gravity="center_vertical"
        android:hint="@string/search_hint"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:paddingLeft="14dp"
        android:textColorHint="@color/search_text_hint"
        android:textSize="@dimen/textSize"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="46dp"
            android:text="@string/empno"
            android:textColor="@color/manage_text_color"
            android:textSize="@dimen/textSize"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="86dp"
            android:text="@string/name"
            android:textColor="@color/manage_text_color"
            android:textSize="@dimen/textSize"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="86dp"
            android:text="@string/sex"
            android:textColor="@color/manage_text_color"
            android:textSize="@dimen/textSize"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="106dp"
            android:text="@string/telephone"
            android:textColor="@color/manage_text_color"
            android:textSize="@dimen/textSize"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="226dp"
            android:text="@string/idcard"
            android:textColor="@color/manage_text_color"
            android:textSize="@dimen/textSize"/>

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="210dp"
            android:background="@drawable/shape_delete"
            android:padding="5dp"
            android:text="@string/delete_all"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />-->

    </LinearLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_employees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>