<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appbackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="13dp"
        android:layout_marginRight="13dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_date_Start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_weight="1"
            android:background="@color/manage_bg_appbar"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="2019/09/18"
            android:textColor="@color/manage_item_text_color"
            android:textSize="@dimen/textSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="14dp"
            android:gravity="center"
            android:text="@string/time_to"
            android:textColor="@color/manage_text_color"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/tv_date_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="14dp"
            android:layout_weight="1"
            android:background="@color/manage_bg_appbar"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="2019/09/18"
            android:textColor="@color/manage_item_text_color"
            android:textSize="@dimen/textSize" />

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="756dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="14dp"
            android:background="@drawable/shape_bg_search"
            android:drawableLeft="@drawable/icon_search"
            android:drawablePadding="14dp"
            android:gravity="center_vertical"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:maxLines="1"
            android:paddingLeft="14dp"
            android:textColorHint="@color/search_text_hint"
            android:textSize="@dimen/textSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="46dp"
            android:text="@string/name"
            android:textColor="@color/manage_text_color"
            android:textSize="@dimen/textSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:text="@string/empno"
            android:textColor="@color/manage_text_color"
            android:textSize="@dimen/textSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="220dp"
            android:text="@string/deviceid"
            android:textColor="@color/manage_text_color"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/tv_delete_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:background="@drawable/shape_delete"
            android:padding="5dp"
            android:text="@string/delete_all_records"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_records"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>

</LinearLayout>