<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:gravity="center">
    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_dialog"
        android:clickable="true"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/shape_bg_dialog_title">
            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:background="@drawable/selector_bg_btn"
                android:drawableLeft="@drawable/ic_arrow_back_black_36dp"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/cancel"
                android:textColor="#000000"
                android:textSize="@dimen/textSize"/>
            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:background="@drawable/selector_bg_btn"
                android:drawableRight="@drawable/editor_icon_confirm"
                android:gravity="center"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/ok"
                android:textColor="#000000"
                android:textSize="@dimen/textSize"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/whether_delete_all"
                android:textColor="@color/em_text_color"
                android:textSize="30sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>